exports[`Container > Organizations Delete Organization 1`] = `
Array [
  Object {
    "payload": "1",
    "type": "delete organization",
  },
  Object {
    "payload": Object {
      "args": Array [
        "/",
      ],
      "method": "push",
    },
    "type": "@@router/CALL_HISTORY_METHOD",
  },
]
`;

exports[`Container > Organizations Organizations View loads 1`] = `
<Connect(Organizations)>
  <Organizations
    deleteOrganization={[Function]}
    organizations={Array []}>
    <Grid
      bsClass="container"
      componentClass="div"
      fluid={false}>
      <div
        className="container">
        <Row
          bsClass="row"
          componentClass="div">
          <div
            className="row">
            <Col
              bsClass="col"
              componentClass="div"
              xs={12}>
              <div
                className="col-xs-12">
                <h2>
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="default"
                    className="pull-right"
                    disabled={false}>
                    <button
                      className="pull-right btn btn-default"
                      disabled={false}
                      type="button">
                      <Link
                        onlyActiveOnIndex={false}
                        style={Object {}}
                        to="/organizations/create">
                        <a
                          onClick={[Function]}
                          style={Object {}}>
                          <Icon
                            type="shield">
                            <i
                              className="fa fa-shield fa-fw " />
                          </Icon>
                        </a>
                      </Link>
                    </button>
                  </Button>
                </h2>
                <p>
                  <Icon
                    type="building">
                    <i
                      className="fa fa-building fa-fw " />
                  </Icon>
                  <Icon
                    type="users">
                    <i
                      className="fa fa-users fa-fw " />
                  </Icon>
                </p>
                <BootstrapTable
                  bodyContainerClass={null}
                  bordered={true}
                  cellEdit={
                    Object {
                      "__onCompleteEdit__": [Function],
                      "afterSaveCell": undefined,
                      "beforeSaveCell": undefined,
                      "blurToSave": false,
                      "mode": "none",
                    }
                  }
                  columnFilter={false}
                  condensed={false}
                  containerClass={null}
                  csvFileName="spreadsheet.csv"
                  data={Array []}
                  deleteRow={false}
                  exportCSV={false}
                  fetchInfo={
                    Object {
                      "dataTotalSize": 0,
                    }
                  }
                  headerContainerClass={null}
                  height="100%"
                  hover={false}
                  ignoreSinglePage={false}
                  insertRow={false}
                  multiColumnSearch={false}
                  options={
                    Object {
                      "afterColumnFilter": undefined,
                      "afterDeleteRow": undefined,
                      "afterInsertRow": undefined,
                      "afterSearch": undefined,
                      "afterTableComplete": undefined,
                      "clearSearch": false,
                      "closeText": "Close",
                      "defaultSearch": "",
                      "defaultSortName": undefined,
                      "defaultSortOrder": undefined,
                      "deleteText": "Delete",
                      "exportCSVText": "Export to CSV",
                      "firstPage": "<<",
                      "handleConfirmDeleteRow": undefined,
                      "hideSizePerPage": false,
                      "ignoreEditable": false,
                      "insertText": "New",
                      "lastPage": ">>",
                      "nextPage": ">",
                      "noDataText": undefined,
                      "onMouseEnter": undefined,
                      "onMouseLeave": undefined,
                      "onRowClick": undefined,
                      "onRowDoubleClick": undefined,
                      "onRowMouseOut": undefined,
                      "onRowMouseOver": undefined,
                      "onSizePerPageList": undefined,
                      "page": undefined,
                      "pageStartIndex": undefined,
                      "paginationShowsTotal": false,
                      "paginationSize": 5,
                      "prePage": "<",
                      "saveText": "Save",
                      "searchDelayTime": undefined,
                      "sizePerPage": undefined,
                      "sizePerPageList": Array [
                        10,
                        25,
                        30,
                        50,
                      ],
                      "sortIndicator": true,
                      "sortName": undefined,
                      "sortOrder": undefined,
                    }
                  }
                  pagination={false}
                  printable={false}
                  search={false}
                  selectRow={
                    Object {
                      "bgColor": "",
                      "clickToSelect": false,
                      "clickToSelectAndEditCell": false,
                      "customComponent": undefined,
                      "hideSelectColumn": false,
                      "mode": "none",
                      "onSelect": undefined,
                      "onSelectAll": undefined,
                      "selected": Array [],
                      "showOnlySelected": false,
                      "unselectable": Array [],
                    }
                  }
                  striped={false}
                  tableBodyClass={null}
                  tableContainerClass={null}
                  tableHeaderClass={null}
                  trClassName="">
                  <div
                    className="react-bs-table-container">
                    <div
                      className="react-bs-table"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "height": "100%",
                          "maxHeight": undefined,
                        }
                      }>
                      <TableHeader
                        bordered={true}
                        condensed={false}
                        headerContainerClass={null}
                        hideSelectColumn={false}
                        isFiltered={false}
                        isSelectAll={false}
                        onSelectAllRow={[Function]}
                        onSort={[Function]}
                        rowSelectType="none"
                        sortIndicator={true}
                        tableHeaderClass={null}>
                        <div
                          className="react-bs-container-header table-header-wrapper">
                          <table
                            className="table table-hover table-bordered">
                            <thead>
                              <tr>
                                <TableHeaderColumn
                                  className=""
                                  columnClassName=""
                                  columnTitle={false}
                                  dataAlign="left"
                                  dataField="id"
                                  dataSort={false}
                                  editable={true}
                                  filterFormatted={false}
                                  headerTitle={true}
                                  hidden={true}
                                  hiddenOnInsert={false}
                                  isKey={true}
                                  onSort={[Function]}
                                  searchable={true}
                                  sortIndicator={true}
                                  width={null}>
                                  <th
                                    className=""
                                    onClick={[Function]}
                                    style={
                                      Object {
                                        "display": "none",
                                        "textAlign": "left",
                                      }
                                    }>
                                    <div
                                      onClick={[Function]} />
                                  </th>
                                </TableHeaderColumn>
                                <TableHeaderColumn
                                  className=""
                                  columnClassName=""
                                  columnTitle={false}
                                  dataAlign="left"
                                  dataField="name"
                                  dataFormat={[Function]}
                                  dataSort={false}
                                  editable={true}
                                  filterFormatted={false}
                                  headerTitle={true}
                                  hidden={false}
                                  hiddenOnInsert={false}
                                  isKey={false}
                                  onSort={[Function]}
                                  searchable={true}
                                  sortIndicator={true}
                                  width={null}>
                                  <th
                                    className=""
                                    onClick={[Function]}
                                    style={
                                      Object {
                                        "display": null,
                                        "textAlign": "left",
                                      }
                                    }
                                    title="Name">
                                    <div
                                      onClick={[Function]} />
                                  </th>
                                </TableHeaderColumn>
                                <TableHeaderColumn
                                  className=""
                                  columnClassName=""
                                  columnTitle={false}
                                  dataAlign="left"
                                  dataField="sites"
                                  dataFormat={[Function]}
                                  dataSort={false}
                                  editable={true}
                                  filterFormatted={false}
                                  headerTitle={true}
                                  hidden={false}
                                  hiddenOnInsert={false}
                                  isKey={false}
                                  onSort={[Function]}
                                  searchable={true}
                                  sortIndicator={true}
                                  width={null}>
                                  <th
                                    className=""
                                    onClick={[Function]}
                                    style={
                                      Object {
                                        "display": null,
                                        "textAlign": "left",
                                      }
                                    }
                                    title="Sites">
                                    <div
                                      onClick={[Function]} />
                                  </th>
                                </TableHeaderColumn>
                                <TableHeaderColumn
                                  className=""
                                  columnClassName=""
                                  columnTitle={false}
                                  dataAlign="left"
                                  dataField="groups"
                                  dataFormat={[Function]}
                                  dataSort={false}
                                  editable={true}
                                  filterFormatted={false}
                                  headerTitle={true}
                                  hidden={false}
                                  hiddenOnInsert={false}
                                  isKey={false}
                                  onSort={[Function]}
                                  searchable={true}
                                  sortIndicator={true}
                                  width={null}>
                                  <th
                                    className=""
                                    onClick={[Function]}
                                    style={
                                      Object {
                                        "display": null,
                                        "textAlign": "left",
                                      }
                                    }
                                    title="Groups">
                                    <div
                                      onClick={[Function]} />
                                  </th>
                                </TableHeaderColumn>
                                <TableHeaderColumn
                                  className=""
                                  columnClassName=""
                                  columnTitle={false}
                                  dataAlign="left"
                                  dataFormat={[Function]}
                                  dataSort={false}
                                  editable={true}
                                  filterFormatted={false}
                                  headerTitle={true}
                                  hidden={false}
                                  hiddenOnInsert={false}
                                  isKey={false}
                                  onSort={[Function]}
                                  searchable={true}
                                  sortIndicator={true}
                                  width={null}>
                                  <th
                                    className=""
                                    onClick={[Function]}
                                    style={
                                      Object {
                                        "display": null,
                                        "textAlign": "left",
                                      }
                                    }
                                    title="Tools">
                                    <div
                                      onClick={[Function]} />
                                  </th>
                                </TableHeaderColumn>
                              </tr>
                            </thead>
                          </table>
                        </div>
                      </TableHeader>
                      <TableBody
                        bodyContainerClass={null}
                        bordered={true}
                        cellEdit={
                          Object {
                            "__onCompleteEdit__": [Function],
                            "afterSaveCell": undefined,
                            "beforeSaveCell": undefined,
                            "blurToSave": false,
                            "mode": "none",
                          }
                        }
                        columns={
                          Array [
                            Object {
                              "align": "left",
                              "className": "",
                              "columnTitle": false,
                              "customEditor": undefined,
                              "editable": true,
                              "export": undefined,
                              "filterFormatted": false,
                              "filterValue": undefined,
                              "format": undefined,
                              "formatExtraData": undefined,
                              "hidden": true,
                              "hiddenOnInsert": false,
                              "index": 0,
                              "name": "id",
                              "searchable": true,
                              "sort": false,
                              "sortFunc": undefined,
                              "sortFuncExtraData": undefined,
                              "text": undefined,
                              "width": null,
                            },
                            Object {
                              "align": "left",
                              "className": "",
                              "columnTitle": false,
                              "customEditor": undefined,
                              "editable": true,
                              "export": undefined,
                              "filterFormatted": false,
                              "filterValue": undefined,
                              "format": [Function],
                              "formatExtraData": undefined,
                              "hidden": false,
                              "hiddenOnInsert": false,
                              "index": 1,
                              "name": "name",
                              "searchable": true,
                              "sort": false,
                              "sortFunc": undefined,
                              "sortFuncExtraData": undefined,
                              "text": "Name",
                              "width": null,
                            },
                            Object {
                              "align": "left",
                              "className": "",
                              "columnTitle": false,
                              "customEditor": undefined,
                              "editable": true,
                              "export": undefined,
                              "filterFormatted": false,
                              "filterValue": undefined,
                              "format": [Function],
                              "formatExtraData": undefined,
                              "hidden": false,
                              "hiddenOnInsert": false,
                              "index": 2,
                              "name": "sites",
                              "searchable": true,
                              "sort": false,
                              "sortFunc": undefined,
                              "sortFuncExtraData": undefined,
                              "text": "Sites",
                              "width": null,
                            },
                            Object {
                              "align": "left",
                              "className": "",
                              "columnTitle": false,
                              "customEditor": undefined,
                              "editable": true,
                              "export": undefined,
                              "filterFormatted": false,
                              "filterValue": undefined,
                              "format": [Function],
                              "formatExtraData": undefined,
                              "hidden": false,
                              "hiddenOnInsert": false,
                              "index": 3,
                              "name": "groups",
                              "searchable": true,
                              "sort": false,
                              "sortFunc": undefined,
                              "sortFuncExtraData": undefined,
                              "text": "Groups",
                              "width": null,
                            },
                            Object {
                              "align": "left",
                              "className": "",
                              "columnTitle": false,
                              "customEditor": undefined,
                              "editable": true,
                              "export": undefined,
                              "filterFormatted": false,
                              "filterValue": undefined,
                              "format": [Function],
                              "formatExtraData": undefined,
                              "hidden": false,
                              "hiddenOnInsert": false,
                              "index": 4,
                              "name": undefined,
                              "searchable": true,
                              "sort": false,
                              "sortFunc": undefined,
                              "sortFuncExtraData": undefined,
                              "text": "Tools",
                              "width": null,
                            },
                          ]
                        }
                        condensed={false}
                        data={Array []}
                        hover={false}
                        keyField="id"
                        onRowClick={[Function]}
                        onRowDoubleClick={[Function]}
                        onRowMouseOut={[Function]}
                        onRowMouseOver={[Function]}
                        onSelectRow={[Function]}
                        selectRow={
                          Object {
                            "bgColor": "",
                            "clickToSelect": false,
                            "clickToSelectAndEditCell": false,
                            "customComponent": undefined,
                            "hideSelectColumn": false,
                            "mode": "none",
                            "onSelect": undefined,
                            "onSelectAll": undefined,
                            "selected": Array [],
                            "showOnlySelected": false,
                            "unselectable": Array [],
                          }
                        }
                        selectedRowKeys={Array []}
                        striped={false}
                        style={
                          Object {
                            "height": "100%",
                            "maxHeight": undefined,
                          }
                        }
                        tableBodyClass={null}
                        trClassName="">
                        <div
                          className="react-bs-container-body"
                          style={
                            Object {
                              "height": "100%",
                              "maxHeight": undefined,
                            }
                          }>
                          <table
                            className="table table-bordered">
                            <colgroup>
                              <col
                                className=""
                                style={
                                  Object {
                                    "display": "none",
                                  }
                                } />
                              <col
                                className=""
                                style={
                                  Object {
                                    "display": null,
                                  }
                                } />
                              <col
                                className=""
                                style={
                                  Object {
                                    "display": null,
                                  }
                                } />
                              <col
                                className=""
                                style={
                                  Object {
                                    "display": null,
                                  }
                                } />
                              <col
                                className=""
                                style={
                                  Object {
                                    "display": null,
                                  }
                                } />
                            </colgroup>
                            <tbody>
                              <TableRow>
                                <tr
                                  className=""
                                  style={
                                    Object {
                                      "backgroundColor": null,
                                    }
                                  }>
                                  <td
                                    className="react-bs-table-no-data"
                                    colSpan={5}>
                                    There is no data to display
                                  </td>
                                </tr>
                              </TableRow>
                            </tbody>
                          </table>
                        </div>
                      </TableBody>
                    </div>
                  </div>
                </BootstrapTable>
              </div>
            </Col>
          </div>
        </Row>
      </div>
    </Grid>
  </Organizations>
</Connect(Organizations)>
`;

exports[`Container > Organizations Organizations View loads with one organization 1`] = `
<Connect(Organizations)>
  <Organizations
    deleteOrganization={[Function]}
    organizations={
      Array [
        Object {
          "analyses": Array [],
          "analysesById": Object {},
          "contact": "someone",
          "email": "abc@def.ghi",
          "groups": Array [],
          "groupsById": Object {},
          "id": "1",
          "logo_url": "https://placekitten.com/80/80",
          "main_url": "https://placekitten.com/",
          "name": "Mock Organization",
          "sites": Array [],
          "sitesById": Object {},
        },
      ]
    }>
    <Grid
      bsClass="container"
      componentClass="div"
      fluid={false}>
      <div
        className="container">
        <Row
          bsClass="row"
          componentClass="div">
          <div
            className="row">
            <Col
              bsClass="col"
              componentClass="div"
              xs={12}>
              <div
                className="col-xs-12">
                <h2>
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="default"
                    className="pull-right"
                    disabled={false}>
                    <button
                      className="pull-right btn btn-default"
                      disabled={false}
                      type="button">
                      <Link
                        onlyActiveOnIndex={false}
                        style={Object {}}
                        to="/organizations/create">
                        <a
                          onClick={[Function]}
                          style={Object {}}>
                          <Icon
                            type="shield">
                            <i
                              className="fa fa-shield fa-fw " />
                          </Icon>
                        </a>
                      </Link>
                    </button>
                  </Button>
                </h2>
                <p>
                  <Icon
                    type="building">
                    <i
                      className="fa fa-building fa-fw " />
                  </Icon>
                  <Icon
                    type="users">
                    <i
                      className="fa fa-users fa-fw " />
                  </Icon>
                </p>
                <BootstrapTable
                  bodyContainerClass={null}
                  bordered={true}
                  cellEdit={
                    Object {
                      "__onCompleteEdit__": [Function],
                      "afterSaveCell": undefined,
                      "beforeSaveCell": undefined,
                      "blurToSave": false,
                      "mode": "none",
                    }
                  }
                  columnFilter={false}
                  condensed={false}
                  containerClass={null}
                  csvFileName="spreadsheet.csv"
                  data={
                    Array [
                      Object {
                        "analyses": Array [],
                        "analysesById": Object {},
                        "contact": "someone",
                        "email": "abc@def.ghi",
                        "groups": Array [],
                        "groupsById": Object {},
                        "id": "1",
                        "logo_url": "https://placekitten.com/80/80",
                        "main_url": "https://placekitten.com/",
                        "name": "Mock Organization",
                        "sites": Array [],
                        "sitesById": Object {},
                      },
                    ]
                  }
                  deleteRow={false}
                  exportCSV={false}
                  fetchInfo={
                    Object {
                      "dataTotalSize": 0,
                    }
                  }
                  headerContainerClass={null}
                  height="100%"
                  hover={false}
                  ignoreSinglePage={false}
                  insertRow={false}
                  multiColumnSearch={false}
                  options={
                    Object {
                      "afterColumnFilter": undefined,
                      "afterDeleteRow": undefined,
                      "afterInsertRow": undefined,
                      "afterSearch": undefined,
                      "afterTableComplete": undefined,
                      "clearSearch": false,
                      "closeText": "Close",
                      "defaultSearch": "",
                      "defaultSortName": undefined,
                      "defaultSortOrder": undefined,
                      "deleteText": "Delete",
                      "exportCSVText": "Export to CSV",
                      "firstPage": "<<",
                      "handleConfirmDeleteRow": undefined,
                      "hideSizePerPage": false,
                      "ignoreEditable": false,
                      "insertText": "New",
                      "lastPage": ">>",
                      "nextPage": ">",
                      "noDataText": undefined,
                      "onMouseEnter": undefined,
                      "onMouseLeave": undefined,
                      "onRowClick": undefined,
                      "onRowDoubleClick": undefined,
                      "onRowMouseOut": undefined,
                      "onRowMouseOver": undefined,
                      "onSizePerPageList": undefined,
                      "page": undefined,
                      "pageStartIndex": undefined,
                      "paginationShowsTotal": false,
                      "paginationSize": 5,
                      "prePage": "<",
                      "saveText": "Save",
                      "searchDelayTime": undefined,
                      "sizePerPage": undefined,
                      "sizePerPageList": Array [
                        10,
                        25,
                        30,
                        50,
                      ],
                      "sortIndicator": true,
                      "sortName": undefined,
                      "sortOrder": undefined,
                    }
                  }
                  pagination={false}
                  printable={false}
                  search={false}
                  selectRow={
                    Object {
                      "bgColor": "",
                      "clickToSelect": false,
                      "clickToSelectAndEditCell": false,
                      "customComponent": undefined,
                      "hideSelectColumn": false,
                      "mode": "none",
                      "onSelect": undefined,
                      "onSelectAll": undefined,
                      "selected": Array [],
                      "showOnlySelected": false,
                      "unselectable": Array [],
                    }
                  }
                  striped={false}
                  tableBodyClass={null}
                  tableContainerClass={null}
                  tableHeaderClass={null}
                  trClassName="">
                  <div
                    className="react-bs-table-container">
                    <div
                      className="react-bs-table"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "height": "100%",
                          "maxHeight": undefined,
                        }
                      }>
                      <TableHeader
                        bordered={true}
                        condensed={false}
                        headerContainerClass={null}
                        hideSelectColumn={false}
                        isFiltered={false}
                        isSelectAll={false}
                        onSelectAllRow={[Function]}
                        onSort={[Function]}
                        rowSelectType="none"
                        sortIndicator={true}
                        tableHeaderClass={null}>
                        <div
                          className="react-bs-container-header table-header-wrapper">
                          <table
                            className="table table-hover table-bordered">
                            <thead>
                              <tr>
                                <TableHeaderColumn
                                  className=""
                                  columnClassName=""
                                  columnTitle={false}
                                  dataAlign="left"
                                  dataField="id"
                                  dataSort={false}
                                  editable={true}
                                  filterFormatted={false}
                                  headerTitle={true}
                                  hidden={true}
                                  hiddenOnInsert={false}
                                  isKey={true}
                                  onSort={[Function]}
                                  searchable={true}
                                  sortIndicator={true}
                                  width={null}>
                                  <th
                                    className=""
                                    onClick={[Function]}
                                    style={
                                      Object {
                                        "display": "none",
                                        "textAlign": "left",
                                      }
                                    }>
                                    <div
                                      onClick={[Function]} />
                                  </th>
                                </TableHeaderColumn>
                                <TableHeaderColumn
                                  className=""
                                  columnClassName=""
                                  columnTitle={false}
                                  dataAlign="left"
                                  dataField="name"
                                  dataFormat={[Function]}
                                  dataSort={false}
                                  editable={true}
                                  filterFormatted={false}
                                  headerTitle={true}
                                  hidden={false}
                                  hiddenOnInsert={false}
                                  isKey={false}
                                  onSort={[Function]}
                                  searchable={true}
                                  sortIndicator={true}
                                  width={null}>
                                  <th
                                    className=""
                                    onClick={[Function]}
                                    style={
                                      Object {
                                        "display": null,
                                        "textAlign": "left",
                                      }
                                    }
                                    title="Name">
                                    <div
                                      onClick={[Function]} />
                                  </th>
                                </TableHeaderColumn>
                                <TableHeaderColumn
                                  className=""
                                  columnClassName=""
                                  columnTitle={false}
                                  dataAlign="left"
                                  dataField="sites"
                                  dataFormat={[Function]}
                                  dataSort={false}
                                  editable={true}
                                  filterFormatted={false}
                                  headerTitle={true}
                                  hidden={false}
                                  hiddenOnInsert={false}
                                  isKey={false}
                                  onSort={[Function]}
                                  searchable={true}
                                  sortIndicator={true}
                                  width={null}>
                                  <th
                                    className=""
                                    onClick={[Function]}
                                    style={
                                      Object {
                                        "display": null,
                                        "textAlign": "left",
                                      }
                                    }
                                    title="Sites">
                                    <div
                                      onClick={[Function]} />
                                  </th>
                                </TableHeaderColumn>
                                <TableHeaderColumn
                                  className=""
                                  columnClassName=""
                                  columnTitle={false}
                                  dataAlign="left"
                                  dataField="groups"
                                  dataFormat={[Function]}
                                  dataSort={false}
                                  editable={true}
                                  filterFormatted={false}
                                  headerTitle={true}
                                  hidden={false}
                                  hiddenOnInsert={false}
                                  isKey={false}
                                  onSort={[Function]}
                                  searchable={true}
                                  sortIndicator={true}
                                  width={null}>
                                  <th
                                    className=""
                                    onClick={[Function]}
                                    style={
                                      Object {
                                        "display": null,
                                        "textAlign": "left",
                                      }
                                    }
                                    title="Groups">
                                    <div
                                      onClick={[Function]} />
                                  </th>
                                </TableHeaderColumn>
                                <TableHeaderColumn
                                  className=""
                                  columnClassName=""
                                  columnTitle={false}
                                  dataAlign="left"
                                  dataFormat={[Function]}
                                  dataSort={false}
                                  editable={true}
                                  filterFormatted={false}
                                  headerTitle={true}
                                  hidden={false}
                                  hiddenOnInsert={false}
                                  isKey={false}
                                  onSort={[Function]}
                                  searchable={true}
                                  sortIndicator={true}
                                  width={null}>
                                  <th
                                    className=""
                                    onClick={[Function]}
                                    style={
                                      Object {
                                        "display": null,
                                        "textAlign": "left",
                                      }
                                    }
                                    title="Tools">
                                    <div
                                      onClick={[Function]} />
                                  </th>
                                </TableHeaderColumn>
                              </tr>
                            </thead>
                          </table>
                        </div>
                      </TableHeader>
                      <TableBody
                        bodyContainerClass={null}
                        bordered={true}
                        cellEdit={
                          Object {
                            "__onCompleteEdit__": [Function],
                            "afterSaveCell": undefined,
                            "beforeSaveCell": undefined,
                            "blurToSave": false,
                            "mode": "none",
                          }
                        }
                        columns={
                          Array [
                            Object {
                              "align": "left",
                              "className": "",
                              "columnTitle": false,
                              "customEditor": undefined,
                              "editable": true,
                              "export": undefined,
                              "filterFormatted": false,
                              "filterValue": undefined,
                              "format": undefined,
                              "formatExtraData": undefined,
                              "hidden": true,
                              "hiddenOnInsert": false,
                              "index": 0,
                              "name": "id",
                              "searchable": true,
                              "sort": false,
                              "sortFunc": undefined,
                              "sortFuncExtraData": undefined,
                              "text": undefined,
                              "width": null,
                            },
                            Object {
                              "align": "left",
                              "className": "",
                              "columnTitle": false,
                              "customEditor": undefined,
                              "editable": true,
                              "export": undefined,
                              "filterFormatted": false,
                              "filterValue": undefined,
                              "format": [Function],
                              "formatExtraData": undefined,
                              "hidden": false,
                              "hiddenOnInsert": false,
                              "index": 1,
                              "name": "name",
                              "searchable": true,
                              "sort": false,
                              "sortFunc": undefined,
                              "sortFuncExtraData": undefined,
                              "text": "Name",
                              "width": null,
                            },
                            Object {
                              "align": "left",
                              "className": "",
                              "columnTitle": false,
                              "customEditor": undefined,
                              "editable": true,
                              "export": undefined,
                              "filterFormatted": false,
                              "filterValue": undefined,
                              "format": [Function],
                              "formatExtraData": undefined,
                              "hidden": false,
                              "hiddenOnInsert": false,
                              "index": 2,
                              "name": "sites",
                              "searchable": true,
                              "sort": false,
                              "sortFunc": undefined,
                              "sortFuncExtraData": undefined,
                              "text": "Sites",
                              "width": null,
                            },
                            Object {
                              "align": "left",
                              "className": "",
                              "columnTitle": false,
                              "customEditor": undefined,
                              "editable": true,
                              "export": undefined,
                              "filterFormatted": false,
                              "filterValue": undefined,
                              "format": [Function],
                              "formatExtraData": undefined,
                              "hidden": false,
                              "hiddenOnInsert": false,
                              "index": 3,
                              "name": "groups",
                              "searchable": true,
                              "sort": false,
                              "sortFunc": undefined,
                              "sortFuncExtraData": undefined,
                              "text": "Groups",
                              "width": null,
                            },
                            Object {
                              "align": "left",
                              "className": "",
                              "columnTitle": false,
                              "customEditor": undefined,
                              "editable": true,
                              "export": undefined,
                              "filterFormatted": false,
                              "filterValue": undefined,
                              "format": [Function],
                              "formatExtraData": undefined,
                              "hidden": false,
                              "hiddenOnInsert": false,
                              "index": 4,
                              "name": undefined,
                              "searchable": true,
                              "sort": false,
                              "sortFunc": undefined,
                              "sortFuncExtraData": undefined,
                              "text": "Tools",
                              "width": null,
                            },
                          ]
                        }
                        condensed={false}
                        data={
                          Array [
                            Object {
                              "analyses": Array [],
                              "analysesById": Object {},
                              "contact": "someone",
                              "email": "abc@def.ghi",
                              "groups": Array [],
                              "groupsById": Object {},
                              "id": "1",
                              "logo_url": "https://placekitten.com/80/80",
                              "main_url": "https://placekitten.com/",
                              "name": "Mock Organization",
                              "sites": Array [],
                              "sitesById": Object {},
                            },
                          ]
                        }
                        hover={false}
                        keyField="id"
                        onRowClick={[Function]}
                        onRowDoubleClick={[Function]}
                        onRowMouseOut={[Function]}
                        onRowMouseOver={[Function]}
                        onSelectRow={[Function]}
                        selectRow={
                          Object {
                            "bgColor": "",
                            "clickToSelect": false,
                            "clickToSelectAndEditCell": false,
                            "customComponent": undefined,
                            "hideSelectColumn": false,
                            "mode": "none",
                            "onSelect": undefined,
                            "onSelectAll": undefined,
                            "selected": Array [],
                            "showOnlySelected": false,
                            "unselectable": Array [],
                          }
                        }
                        selectedRowKeys={Array []}
                        striped={false}
                        style={
                          Object {
                            "height": "100%",
                            "maxHeight": undefined,
                          }
                        }
                        tableBodyClass={null}
                        trClassName="">
                        <div
                          className="react-bs-container-body"
                          style={
                            Object {
                              "height": "100%",
                              "maxHeight": undefined,
                            }
                          }>
                          <table
                            className="table table-bordered">
                            <colgroup>
                              <col
                                className=""
                                style={
                                  Object {
                                    "display": "none",
                                  }
                                } />
                              <col
                                className=""
                                style={
                                  Object {
                                    "display": null,
                                  }
                                } />
                              <col
                                className=""
                                style={
                                  Object {
                                    "display": null,
                                  }
                                } />
                              <col
                                className=""
                                style={
                                  Object {
                                    "display": null,
                                  }
                                } />
                              <col
                                className=""
                                style={
                                  Object {
                                    "display": null,
                                  }
                                } />
                            </colgroup>
                            <tbody>
                              <TableRow
                                className=""
                                enableCellEdit={false}
                                isSelected={false}
                                onRowClick={[Function]}
                                onRowDoubleClick={[Function]}
                                onRowMouseOut={[Function]}
                                onRowMouseOver={[Function]}
                                onSelectRow={[Function]}
                                unselectableRow={false}>
                                <tr
                                  className=""
                                  onClick={[Function]}
                                  onDoubleClick={[Function]}
                                  onMouseOut={[Function]}
                                  onMouseOver={[Function]}
                                  style={
                                    Object {
                                      "backgroundColor": null,
                                    }
                                  }>
                                  <TableColumn
                                    cellEdit={
                                      Object {
                                        "__onCompleteEdit__": [Function],
                                        "afterSaveCell": undefined,
                                        "beforeSaveCell": undefined,
                                        "blurToSave": false,
                                        "mode": "none",
                                      }
                                    }
                                    className=""
                                    columnTitle={null}
                                    dataAlign="left"
                                    hidden={true}
                                    onEdit={[Function]}
                                    width={null}>
                                    <td
                                      className=""
                                      style={
                                        Object {
                                          "display": "none",
                                          "textAlign": "left",
                                        }
                                      }
                                      title={null}>
                                      1
                                    </td>
                                  </TableColumn>
                                  <TableColumn
                                    cellEdit={
                                      Object {
                                        "__onCompleteEdit__": [Function],
                                        "afterSaveCell": undefined,
                                        "beforeSaveCell": undefined,
                                        "blurToSave": false,
                                        "mode": "none",
                                      }
                                    }
                                    className=""
                                    columnTitle={null}
                                    dataAlign="left"
                                    hidden={false}
                                    onEdit={[Function]}
                                    width={null}>
                                    <td
                                      className=""
                                      style={
                                        Object {
                                          "display": null,
                                          "textAlign": "left",
                                        }
                                      }
                                      title={null}>
                                      <Link
                                        onlyActiveOnIndex={false}
                                        style={Object {}}
                                        to="/organizations/1">
                                        <a
                                          onClick={[Function]}
                                          style={Object {}}>
                                          Mock Organization
                                        </a>
                                      </Link>
                                    </td>
                                  </TableColumn>
                                  <TableColumn
                                    cellEdit={
                                      Object {
                                        "__onCompleteEdit__": [Function],
                                        "afterSaveCell": undefined,
                                        "beforeSaveCell": undefined,
                                        "blurToSave": false,
                                        "mode": "none",
                                      }
                                    }
                                    className=""
                                    columnTitle={null}
                                    dataAlign="left"
                                    hidden={false}
                                    onEdit={[Function]}
                                    width={null}>
                                    <td
                                      className=""
                                      style={
                                        Object {
                                          "display": null,
                                          "textAlign": "left",
                                        }
                                      }
                                      title={null}>
                                      <div
                                        dangerouslySetInnerHTML={
                                          Object {
                                            "__html": 0,
                                          }
                                        } />
                                    </td>
                                  </TableColumn>
                                  <TableColumn
                                    cellEdit={
                                      Object {
                                        "__onCompleteEdit__": [Function],
                                        "afterSaveCell": undefined,
                                        "beforeSaveCell": undefined,
                                        "blurToSave": false,
                                        "mode": "none",
                                      }
                                    }
                                    className=""
                                    columnTitle={null}
                                    dataAlign="left"
                                    hidden={false}
                                    onEdit={[Function]}
                                    width={null}>
                                    <td
                                      className=""
                                      style={
                                        Object {
                                          "display": null,
                                          "textAlign": "left",
                                        }
                                      }
                                      title={null}>
                                      <div
                                        dangerouslySetInnerHTML={
                                          Object {
                                            "__html": 0,
                                          }
                                        } />
                                    </td>
                                  </TableColumn>
                                  <TableColumn
                                    cellEdit={
                                      Object {
                                        "__onCompleteEdit__": [Function],
                                        "afterSaveCell": undefined,
                                        "beforeSaveCell": undefined,
                                        "blurToSave": false,
                                        "mode": "none",
                                      }
                                    }
                                    className=""
                                    columnTitle={null}
                                    dataAlign="left"
                                    hidden={false}
                                    onEdit={[Function]}
                                    width={null}>
                                    <td
                                      className=""
                                      style={
                                        Object {
                                          "display": null,
                                          "textAlign": "left",
                                        }
                                      }
                                      title={null}>
                                      <div>
                                        <Button
                                          active={false}
                                          block={false}
                                          bsClass="btn"
                                          bsStyle="warning"
                                          disabled={false}>
                                          <button
                                            className="btn btn-warning"
                                            disabled={false}
                                            type="button">
                                            <Link
                                              onlyActiveOnIndex={false}
                                              style={Object {}}
                                              to="/organizations/1/edit">
                                              <a
                                                onClick={[Function]}
                                                style={Object {}}>
                                                Edit
                                              </a>
                                            </Link>
                                          </button>
                                        </Button>
                                        <Button
                                          active={false}
                                          block={false}
                                          bsClass="btn"
                                          bsStyle="danger"
                                          disabled={false}
                                          onClick={[Function]}>
                                          <button
                                            className="btn btn-danger"
                                            disabled={false}
                                            onClick={[Function]}
                                            type="button">
                                            Delete
                                          </button>
                                        </Button>
                                      </div>
                                    </td>
                                  </TableColumn>
                                </tr>
                              </TableRow>
                            </tbody>
                          </table>
                        </div>
                      </TableBody>
                    </div>
                  </div>
                </BootstrapTable>
              </div>
            </Col>
          </div>
        </Row>
      </div>
    </Grid>
  </Organizations>
</Connect(Organizations)>
`;
